# eyeCATCHER

./: .env  index.html  supabase-fix-rls.sql  supabase-migration.sql
src/: main.ts  styles.css  supabase.ts
src-tauri/: .gitignore  Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
